@@ -245,6 +245,7 @@ module ActiveMerchant #:nodoc:
         post[:additionalData][:industryUsage] = options[:industry_usage] if options[:industry_usage]
         post[:additionalData][:RequestedTestAcquirerResponseCode] = options[:requested_test_acquirer_response_code] if options[:requested_test_acquirer_response_code] && test?
         post[:deviceFingerprint] = options[:device_fingerprint] if options[:device_fingerprint]
+        post[:store] = options[:store] if options[:store]
         add_shopper_data(post, options)
         add_risk_data(post, options)
         add_shopper_reference(post, options)
